--- a/index.html
+++ b/index.html
@@ -1,40 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
 
-      
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+
+    <div class="row">
+
+      <div class="col-1 hour">9AM</div>
+      <div class="col-10 p-0 ta" id="09" ><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <div class="row">
+
+      <div class="col-1 hour">10AM</div>
+      <div class="col-10 p-0 ta" id="10"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">11AM</div>
+      <div class="col-10 p-0 ta" id="11"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">12PM</div>
+      <div class="col-10 p-0 ta" id="12"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">1PM</div>
+      <div class="col-10 p-0 ta" id="13"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">2PM</div>
+      <div class="col-10 p-0 ta" id="14"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">3PM</div>
+      <div class="col-10 p-0 ta" id="15"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">4PM</div>
+      <div class="col-10 p-0 ta" id="16"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">5PM</div>
+      <div class="col-10 p-0 ta" id="17"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src = "assets/script.js"></script>
+</body>
+
 </html>
