finished html added to js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button class="col-1 saveBtn"><p class="btnText">save</p></button>
 
     </div>
-    
+
     <div class="row">
 
       <div class="col-1 hour">10AM</div>
@@ -45,7 +45,54 @@
       <button class="col-1 saveBtn"><p class="btnText">save</p></button>
 
     </div>
+    
+    <div class="row">
 
+      <div class="col-1 hour">12PM</div>
+      <div class="col-10 p-0 ta" id="12"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">1PM</div>
+      <div class="col-10 p-0 ta" id="13"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">2PM</div>
+      <div class="col-10 p-0 ta" id="14"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">3PM</div>
+      <div class="col-10 p-0 ta" id="15"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">4PM</div>
+      <div class="col-10 p-0 ta" id="16"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-1 hour">5PM</div>
+      <div class="col-10 p-0 ta" id="17"><textarea></textarea></div>
+      <button class="col-1 saveBtn"><p class="btnText">save</p></button>
+
+    </div>
 
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
